overflow image fix

--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -74,7 +74,7 @@
     color: white;
     transition: all .5s ease;
 }
-.Work-box:hover {
+.Work-box:hover .Box-image{
     transform: scale(1.5);
 }
 .Box-hide .Box-arrow {
